# SmartCare-Analytics

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml  requirements.txt
ML/: predict_example.py  train_poc.py
ML/artifacts/: feature_columns.json  gradient_boosting.joblib  metrics.json  prophet.joblib
ML/data/raw/: Jeu de données - Smart Care - generation_parameters.csv
ML/docs/: GUIDE_INTEGRATION_DEV.md  GUIDE_TECHNIQUE_PREDICTION.md
ML/smartcare_model/: __init__.py  pipeline.py  prophet.py
ML/smartcare_model/artifacts/: __init__.py  store.py
ML/smartcare_model/config/: __init__.py  constants.py  paths.py
ML/smartcare_model/data/: __init__.py  loading.py
ML/smartcare_model/evaluation/: __init__.py  metrics.py
ML/smartcare_model/features/: __init__.py  engineering.py  selection.py
ML/smartcare_model/inference/: __init__.py  predict.py  similarity.py
ML/smartcare_model/models/: __init__.py  interfaces.py  registry.py
ML/smartcare_model/training/: __init__.py  trainer.py
app/: app.py
app/backup/: app_backup.py
app/pages/: prediction.py  prediction_store.py  recommandations.py  simulation.py  ui_helpers.py
data/raw/: Jeu de données - Smart Care - daily_hospital_context.csv  Jeu de données - Smart Care - daily_hospital_context_2022-2024_generated.csv  Jeu de données - Smart Care - daily_hospital_context_2022-2026_generated.csv  Jeu de données - Smart Care - event_detection_rules.csv  Jeu de données - Smart Care - event_detection_rules_2022-2024_generated.csv  Jeu de données - Smart Care - event_detection_rules_2022-2026_generated.csv  Jeu de données - Smart Care - generation_parameters.csv  Jeu de données - Smart Care - hospital_baseline.csv  Jeu de données - Smart Care - school_holidays_reference.csv  Jeu de données - Smart Care - school_holidays_reference_2022-2024_generated.csv  Jeu de données - Smart Care - school_holidays_reference_2022-2026_generated.csv  Jeu de données - Smart Care - special_event_reference.csv  Jeu de données - Smart Care - special_event_reference_2022-2024_generated.csv  Jeu de données - Smart Care - special_event_reference_2022-2026_generated.csv  Jeu de données - Smart Care - staff_varation_rules.csv  Jeu de données - Smart Care - staff_varation_rules_2022-2024_generated.csv  Jeu de données - Smart Care - staff_varation_rules_2022-2026_generated.csv  Jeu de données - Smart Care - weather_daily_reference.csv  Jeu de données - Smart Care - weather_daily_reference_2022-2024_generated.csv  Jeu de données - Smart Care - weather_daily_reference_2022-2026_generated.csv  Luxembourg_2019-2024_meteo(in).csv
docs/: ARCHITECTURE.md  AUDIT_TECHNIQUE.md  CORRECTIONS_NAVIGATION.md  DESIGN_SYSTEM.md  GUIDE_STREAMLIT.md  GUIDE_UTILISATION.md  NOUVELLE_STRUCTURE.md  PREDICTION_KNN.md  README.md  consigne.md
tools/: generate_smart_care_data.py  predict_example.py  train_poc.py  train_prophet.py
