[project]
name = "smartcare-grp1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair==6.0.0 ; python_full_version >= '3.9'",
    "attrs==25.4.0 ; python_full_version >= '3.9'",
    "blinker==1.9.0 ; python_full_version >= '3.9'",
    "cachetools==6.2.6 ; python_full_version >= '3.9'",
    "certifi==2026.1.4 ; python_full_version >= '3.7'",
    "charset-normalizer==3.4.4 ; python_full_version >= '3.7'",
    "click==8.3.1 ; python_full_version >= '3.10'",
    "colorama==0.4.6 ; python_full_version >= '2.7'",
    "contourpy==1.3.3 ; python_full_version >= '3.11'",
    "cycler==0.12.1 ; python_full_version >= '3.8'",
    "et-xmlfile==2.0.0 ; python_full_version >= '3.8'",
    "fonttools==4.61.1 ; python_full_version >= '3.10'",
    "gitdb==4.0.12 ; python_full_version >= '3.7'",
    "gitpython==3.1.46 ; python_full_version >= '3.7'",
    "idna==3.11 ; python_full_version >= '3.8'",
    "jinja2==3.1.6 ; python_full_version >= '3.7'",
    "joblib==1.5.3 ; python_full_version >= '3.9'",
    "jsonschema==4.26.0 ; python_full_version >= '3.10'",
    "jsonschema-specifications==2025.9.1 ; python_full_version >= '3.9'",
    "kiwisolver==1.4.9 ; python_full_version >= '3.10'",
    "markupsafe==3.0.3 ; python_full_version >= '3.9'",
    "matplotlib==3.10.8 ; python_full_version >= '3.10'",
    "narwhals==2.16.0 ; python_full_version >= '3.9'",
    "numpy<2 ; python_full_version >= '3.11'",
    "openpyxl==3.1.5 ; python_full_version >= '3.8'",
    "packaging==26.0 ; python_full_version >= '3.8'",
    "pandas==2.3.3 ; python_full_version >= '3.9'",
    "pillow==12.1.0 ; python_full_version >= '3.10'",
    "pip>=26.0",
    "plotly==6.5.2 ; python_full_version >= '3.8'",
    "protobuf==6.33.5 ; python_full_version >= '3.9'",
    "prophet==1.1.5 ; python_full_version >= '3.9'",
    "pyarrow==23.0.0 ; python_full_version >= '3.10'",
    "pydeck==0.9.1 ; python_full_version >= '3.8'",
    "pyparsing==3.3.2 ; python_full_version >= '3.9'",
    "python-dateutil==2.9.0.post0 ; python_full_version >= '2.7'",
    "pytz==2025.2",
    "referencing==0.37.0 ; python_full_version >= '3.10'",
    "requests==2.32.5 ; python_full_version >= '3.9'",
    "rpds-py==0.30.0 ; python_full_version >= '3.10'",
    "scikit-learn==1.8.0 ; python_full_version >= '3.11'",
    "scipy==1.17.0 ; python_full_version >= '3.11'",
    "seaborn==0.13.2 ; python_full_version >= '3.8'",
    "six==1.17.0 ; python_full_version >= '2.7'",
    "smmap==5.0.2 ; python_full_version >= '3.7'",
    "streamlit==1.53.1 ; python_full_version >= '3.10'",
    "tenacity==9.1.2 ; python_full_version >= '3.9'",
    "threadpoolctl==3.6.0 ; python_full_version >= '3.9'",
    "toml==0.10.2 ; python_full_version >= '2.6'",
    "tornado==6.5.4 ; python_full_version >= '3.9'",
    "typing-extensions==4.15.0 ; python_full_version >= '3.9'",
    "tzdata==2025.3 ; python_full_version >= '2'",
    "urllib3==2.6.3 ; python_full_version >= '3.9'",
    "watchdog==6.0.0 ; python_full_version >= '3.9'",
    "prophet>=1.1.5",
]
